[gd_scene load_steps=21 format=3 uid="uid://gnlnv0irvqjr"]

[ext_resource type="Script" path="res://puzzle/light.gd" id="1_u231y"]
[ext_resource type="Texture2D" uid="uid://2rkklupv13eh" path="res://assets/puzzle/Mage-Sheet.png" id="2_6w1cw"]
[ext_resource type="Texture2D" uid="uid://c4nlv5wa5nhc6" path="res://puzzle/button/Blue/btn_right.png" id="3_nfb2n"]
[ext_resource type="FontFile" uid="uid://c6hrglfhhssw7" path="res://assets/fonts/Kurland.otf" id="3_nh4yk"]
[ext_resource type="Texture2D" uid="uid://bbnf25yxvyt2e" path="res://puzzle/button/Blue/btn_left.png" id="4_w6pt0"]
[ext_resource type="Texture2D" uid="uid://g8tdmqff6aak" path="res://puzzle/button/Blue/btn_top.png" id="5_jxbeo"]
[ext_resource type="Texture2D" uid="uid://bxjyj5tp4k43u" path="res://puzzle/button/Blue/btn_bottom.png" id="6_hcofx"]
[ext_resource type="Texture2D" uid="uid://cf2xn1ncq3pw7" path="res://puzzle/button/Red/btn_restart – 1.png" id="7_842d6"]
[ext_resource type="Texture2D" uid="uid://dtupb5qkcuypl" path="res://puzzle/button/Red/btn_restart_pressed – 1.png" id="8_c31to"]
[ext_resource type="Texture2D" uid="uid://4ia6vrx3o8px" path="res://puzzle/button/Green/btn_yes.png" id="9_64a6g"]
[ext_resource type="Texture2D" uid="uid://b4txmq0uvqw3t" path="res://puzzle/button/Green/btn_yes_pressed.png" id="10_hhd8k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnes4"]
size = Vector2(3.5, 3.25)

[sub_resource type="Animation" id="Animation_np3ux"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6w1cw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [42]
}

[sub_resource type="Animation" id="Animation_5mhi5"]
resource_name = "direita"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6w1cw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100, 101]
}

[sub_resource type="Animation" id="Animation_c0cmk"]
resource_name = "down"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6w1cw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_6huc4"]
resource_name = "esquerda"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6w1cw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_tin1p"]
resource_name = "up"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6w1cw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [78, 79, 80, 81, 82, 83]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cvxdn"]
_data = {
"RESET": SubResource("Animation_np3ux"),
"direita": SubResource("Animation_5mhi5"),
"down": SubResource("Animation_c0cmk"),
"esquerda": SubResource("Animation_6huc4"),
"up": SubResource("Animation_tin1p")
}

[sub_resource type="LabelSettings" id="LabelSettings_nwb82"]
font = ExtResource("3_nh4yk")
font_size = 28

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fv3b1"]
size = Vector2(4, 4)

[node name="light" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_u231y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_6w1cw")
hframes = 6
vframes = 24
frame = 42

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_bnes4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cvxdn")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="comands" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="comands"]
anchors_preset = -1
anchor_left = 0.717
anchor_right = 1.0
anchor_bottom = 0.255
offset_left = 0.400024
offset_right = 1.0
offset_bottom = -1.52588e-05

[node name="lol" type="Label" parent="comands/PanelContainer"]
layout_mode = 2
size_flags_vertical = 1
label_settings = SubResource("LabelSettings_nwb82")
autowrap_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="comands"]
anchors_preset = -1
anchor_left = 0.716
anchor_top = 0.263
anchor_right = 1.0
anchor_bottom = 0.812
offset_left = 0.200012
offset_top = 0.199997
offset_bottom = -0.200012

[node name="direita" type="Button" parent="comands/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Direita"
icon = ExtResource("3_nfb2n")
expand_icon = true

[node name="esquerda" type="Button" parent="comands/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Esquerda"
icon = ExtResource("4_w6pt0")
expand_icon = true

[node name="cima" type="Button" parent="comands/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Cima"
icon = ExtResource("5_jxbeo")
expand_icon = true

[node name="baixo" type="Button" parent="comands/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Baixo"
icon = ExtResource("6_hcofx")
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="comands"]
anchors_preset = -1
anchor_left = 0.719
anchor_top = 0.812
anchor_right = 0.954
anchor_bottom = 1.0
offset_left = -0.200012
offset_top = -0.200012
offset_right = 36.7999
offset_bottom = 1.0

[node name="TextureButton" type="TextureButton" parent="comands/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("7_842d6")
texture_pressed = ExtResource("8_c31to")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="comands/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("9_64a6g")
texture_pressed = ExtResource("10_hhd8k")
ignore_texture_size = true
stretch_mode = 0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_fv3b1")

[connection signal="pressed" from="comands/VBoxContainer/direita" to="." method="_on_direita_pressed"]
[connection signal="pressed" from="comands/VBoxContainer/esquerda" to="." method="_on_esquerda_pressed"]
[connection signal="pressed" from="comands/VBoxContainer/cima" to="." method="_on_cima_pressed"]
[connection signal="pressed" from="comands/VBoxContainer/baixo" to="." method="_on_baixo_pressed"]
[connection signal="pressed" from="comands/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="comands/HBoxContainer/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
